Edited misc. files

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,10 +1,8 @@
-{{> layouts/main}}
-
+{{ layouts/main}}
 <section id="dashboard" class="content-section">
     <h2>Your Dashboard</h2>
     <p>Welcome, {{username}}! Here's a snapshot of your fitness journey:</p>
 
-    <!-- Dashboard stats -->
     <div class="dashboard-stats">
         <div class="stat-card">
             <h3>Workouts Completed</h3>
@@ -20,7 +18,6 @@
         </div>
     </div>
 
-    <!-- Create New Post Section -->
     <section>
         <h2>Create New Post</h2>
         <form class="new-post-form">
@@ -36,14 +33,13 @@
         </form>
     </section>
 
-    <!-- Display User's Posts Section -->
     {{#if posts.length}}
     <section>
         <h2>Your Posts</h2>
         <ol>
             {{#each posts as |post|}}
             <li>
-                {{> post-info post}}
+                {{ post-info post}}
                 <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a>
             </li>
             {{/each}}
