--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,8 +1,7 @@
 <ol class="post-list">
-    {{!-- any HTML between #each repeated for every item in posts --}}
     {{#each posts as |post|}}
   <li>
-{{> post-info post}}
+{{ post-info post}}
   </li>
   {{/each}}
 </ol>
